[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "yom"
version = "0.1.0"
description = "Markdown tree web server with live updates"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "Markdown>=3.6",
]

[project.scripts]
yom = "yom.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
