[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "yom"
version = "0.1.0a1"
description = "Markdown tree web server with live updates"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "Markdown>=3.6",
  "watchdog>=6.0.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.11.0",
  "ty>=0.0.1a14",
]

[project.scripts]
yom = "yom.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
yom = ["assets/*.html", "assets/*.css", "assets/*.js", "assets/*.txt"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
